<resources>
    <string name="app_name">Gallery_test</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_password">New password*</string>
    <string name="confirm_password">Confirm password*</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email_hint">Email<font fgcolor='#FFFF0000'>*</font></string>
    <string name="userName_hint">User Name<font fgcolor='#FFFF0000'>*</font></string>
    <string name="newPass_hint">New Password<font fgcolor='#FFFF0000'>*</font></string>
    <string name="confirmPass_hint">Confirm Password<font fgcolor='#FFFF0000'>*</font></string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="forgot_login_or_password">Forgot login or password!</string>
    <string name="welcome_string">Welcome!</string>
    <string name="create_an_account_string">Create an account</string>
    <string name="i_already_have_an_account_string">I already have an account</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="upload_photo">Upload photo</string>
    <string name="personal_data">Personal Data</string>
    <string name="user_name">User Name</string>
    <string name="e_mail_adress">E-mail adress</string>
    <string name="old_password">Old Password</string>
    <string name="new_password2">New Password</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="you_can">You can</string>
    <string name="delete_your_account">delete your account</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
</resources>