<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancelButton"
            style="@style/CancelButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <View
            style="@style/ViewStyle"
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="22dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SignInTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <View
                style="@style/SignInViewStyle"
                android:layout_width="90dp"
                android:layout_height="1dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/mail"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/cursor_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/CustomTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleDrawable="@drawable/eye_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/cursor_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotLoginAndPassword"
                style="@style/ForgotLoginButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/forgot_login_or_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                style="@style/LoginButtonStyle"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                style="@style/RegisterButtonStyle"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>