<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancelButtonOfRegister"
            style="@style/CancelButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <View
            style="@style/ViewStyle"
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:paddingStart="21dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SignUpTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

            <View
                style="@style/ViewStyle2"
                android:layout_width="90dp"
                android:layout_height="2dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInputLayout"
                style="@style/CustomRegisterTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/user_icon"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/cursor_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthdayInputLayout"
                style="@style/CustomRegisterTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday">

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/birthdayEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/cil_calendar"
                    android:inputType="date"
                    android:textCursorDrawable="@drawable/cursor_color"
                    app:mask="####-##-##" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/CustomRegisterTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/mail"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/cursor_color" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/CustomRegisterTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newPass_hint"
                app:passwordToggleDrawable="@drawable/eye_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/cursor_color" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordInputLayout"
                style="@style/CustomRegisterTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPass_hint"
                app:passwordToggleDrawable="@drawable/eye_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/cursor_color" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                style="@style/LoginButtonStyleReg"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInButton"
                style="@style/RegisterButtonStyle2"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>